<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/consTraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="380dp"
        android:layout_height="72dp"
        android:gravity="center"
        android:text="@string/titleMain"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/btnOpenColorPicker"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnOpenColorPicker"
        android:layout_width="157dp"
        android:layout_height="48dp"
        android:text="@string/txtBoton"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#FFFFFF"
        app:backgroundTint="#535353"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.303" />

    <TextView
        android:id="@+id/txtRes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblResultado"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnOpenColorPicker"
        app:layout_constraintVertical_bias="0.751" />

    <RadioGroup
        android:id="@+id/rgFormato"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="149dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/txtRes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnOpenColorPicker">

        <RadioButton
            android:id="@+id/rbHex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/hex"
            android:textColor="#FFFFFF" />

        <RadioButton
            android:id="@+id/rbRGB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/rgb"
            android:textColor="#FFFFFF" />

        <RadioButton
            android:id="@+id/rbARGB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/argb"
            android:textColor="#FFFFFF" />
    </RadioGroup>

    <TextView
        android:id="@+id/lblFormato"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titleBottom"
        android:textColor="#FFF6F6"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/rgFormato"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnOpenColorPicker" />

    <Button
        android:id="@+id/btnProcesar"
        android:layout_width="133dp"
        android:layout_height="52dp"
        android:text="@string/txtBotonProcesar"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:backgroundTint="#535353"
        app:layout_constraintBottom_toTopOf="@+id/txtRes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgFormato" />

    <TextView
        android:id="@+id/lblColor"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/lblFormato"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnOpenColorPicker"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btnCopear"
        android:layout_width="115dp"
        android:layout_height="51dp"
        android:text="@string/btnCopear"
        android:textColor="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textSize="12sp"
        app:backgroundTint="#535353"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnProcesar"
        app:layout_constraintVertical_bias="0.873" />

    <TextView
        android:id="@+id/lblFor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblFor"
        android:textIsSelectable="true"
        android:textColor="#FFFEFE"
        app:layout_constraintBottom_toBottomOf="@+id/btnCopear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnProcesar"
        app:layout_constraintVertical_bias="0.482" />


</androidx.constraintlayout.widget.ConstraintLayout>